fix(rating): add missing gap between icon & label as per design (#1669)
* fix(rating): add missing gap between icon & label as per design

* fix(rating): add gap support for xl size rating

--- a/projects/ng-aquila/src/rating/rating.component.scss
+++ b/projects/ng-aquila/src/rating/rating.component.scss
@@ -33,6 +33,19 @@
   display: flex;
   @include type-style(rating-label);
   color: v(rating-label-color);
+
+  &.margin-s {
+    margin-top: v(rating-label-margin-top-s);
+  }
+  &.margin-m {
+    margin-top: v(rating-label-margin-top-m);
+  }
+  &.margin-l {
+    margin-top: v(rating-label-margin-top-l);
+  }
+  &.margin-xl {
+    margin-top: v(rating-label-margin-top-l);
+  }
 }
 
 .nx-rating__label--end {
