--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -1486,6 +1486,9 @@ $nx-theme: (
   rating-icon-size-m: 32px,
   rating-icon-size-l: 40px,
   rating-label-color: text-01,
+  rating-label-margin-top-s: 8px,
+  rating-label-margin-top-m: 12px,
+  rating-label-margin-top-l: 16px,
   rating-disabled-icon-color: disabled-01,
   rating-disabled-label-color: disabled-01,
   rating-label-font-size: paragraph-03-font-size,
